# agent-sidecar

./: .dockerignore  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  README.md
_archive/: README.md
_archive/config/policy-workspace/: schema-manifest.yaml  security-response.schema.json
_archive/config/policy-workspace/prompts/security/: default.md
_archive/deploy/: docker-compose.auth-maintenance.example.yml  docker-compose.example.yml
_archive/docs/adr/: 0001-use-subscription-codex-cli-inside-isolated-sidecar.md  0002-let-codex-query-postgres-through-read-only-role.md  0003-use-network-trust-on-minimal-private-network.md  0004-use-stateless-security-ai-before-executor-ai.md
_archive/scripts/: docker-smoke.sh
_archive/src/: api.rs  codex.rs  database.rs  models.rs  prompt.rs  service.rs
config/policy-workspace/prompts/executor/: default.md
deploy/: docker-compose.example.yml
docs/: security.md
docs/adr/: 0002-let-codex-query-postgres-through-read-only-role.md
scripts/: docker-smoke.sh
src/: api.rs  codex.rs  config.rs  err.rs  executor.rs  inits.rs  lib.rs  main.rs  models.rs  prompt.rs  secret_filter.rs  security.rs
src/ai/: error.rs  mod.rs  service.rs  types.rs
src/ai/providers/: codex.rs
src/config/: ai.rs  app.rs  log.rs  logs.rs  mod.rs
tests/: real_codex.rs
