[package]
name = "agent-sidecar"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "tokio"] }
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.25"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23"
